Toggle fill screen button: remove special styling. Trying to make this toggle button behave like a regular button without the active (toggled) state and with hover styles becomes a CSS hell and is just buggy especially as an inverted button (dark mode). The button will now be in active state (cui-active) when clicked, it will not have a visual hover state, but I believe this is ok considering the mess we would create while trying to "fix" this. The only viable solution would be to remove the cui-active class from this button. see #66219

--- a/src/scss/themes/fylr/components/_buttons.scss
+++ b/src/scss/themes/fylr/components/_buttons.scss
@@ -113,19 +113,6 @@ a[role='button'].cui-button-appearance-link {
 	}
 }
 
-// Button with default active state removed
-.cui-button-toggle-fill-screen {
-	&.cui-active {
-		--btn-color-active: #{$body-color};
-		--btn-background-active: transparent;
-
-		// ! beware: the cui-active state uses --btn-background-active variable as the hover color, not --btn-background-hover
-		&:hover {
-			--btn-background-active: #{$btn-bordered-hover-background};
-		}
-	}
-}
-
 // Loading
 .cui-button.cui-loading {
 	animation: 1.2s pulse linear alternate infinite;
